--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/react-dom": "^18.0.2",
     "bootstrap": "^5.2.2",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.4.3"
   },
